Bug 406777 - Octave warnings break cantor output
Summary: Octave warnings break cantor output
Status: RESOLVED FIXED
Alias: None
Product: cantor
Classification: Applications
Component: octave-backend (other bugs)
Version First Reported In: 19.04
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Nikita Sirgienko
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-04-22 15:46 UTC by avlas
Modified: 2019-04-23 13:23 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 19.04.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description avlas 2019-04-22 15:46:39 UTC
Octave's warnings impede Cantor to proceed with expected outputs. Displaying warnings is a nice feature, but I assume Cantor not being able to report Octave's output is a bug.

[ moved to become a specific bug from https://bugs.kde.org/show_bug.cgi?id=406684 ]
Comment 1 Nikita Sirgienko 2019-04-22 19:25:38 UTC
As i mentioned in another thread, in this moment, we treat warnings as error messages, and Cantor, if error occurs, show only error message and don't show output.
It's simple, actually, change this behavior, show output too for warnings, I will do it, because, as I see, a current behaviour gives problems to user.
Comment 2 avlas 2019-04-22 19:38:07 UTC
(In reply to Nikita Sirgienko from comment #1)
> As i mentioned in another thread, in this moment, we treat warnings as error
> messages, and Cantor, if error occurs, show only error message and don't
> show output.
> It's simple, actually, change this behavior, show output too for warnings, I
> will do it, because, as I see, a current behaviour gives problems to user.

That would be great, thank you!
Comment 3 Nikita Sirgienko 2019-04-23 12:04:56 UTC
Git commit 5dc8af2afd7e7669b43497b58815596c0b7f2c82 by Nikita Sirgienko.
Committed on 23/04/2019 at 12:03.
Pushed by sirgienko into branch 'Applications/19.04'.

[Octave] Fix expression logic: don't treats warnings from octave as error
FIXED-IN: 19.04.1

M  +13   -5    src/backends/octave/octaveexpression.cpp

https://commits.kde.org/cantor/5dc8af2afd7e7669b43497b58815596c0b7f2c82
Comment 4 avlas 2019-04-23 13:23:53 UTC
(In reply to Nikita Sirgienko from comment #3)
> Git commit 5dc8af2afd7e7669b43497b58815596c0b7f2c82 by Nikita Sirgienko.
> Committed on 23/04/2019 at 12:03.
> Pushed by sirgienko into branch 'Applications/19.04'.
> 
> [Octave] Fix expression logic: don't treats warnings from octave as error
> FIXED-IN: 19.04.1
> 
> M  +13   -5    src/backends/octave/octaveexpression.cpp
> 
> https://commits.kde.org/cantor/5dc8af2afd7e7669b43497b58815596c0b7f2c82


Thank you, it's very much appreciated!