[Octave] Fix expression logic: don't treats warnings from octave as error

BUG: 406777
FIXED-IN: 19.04.1